Fix homepage button alignment on certain browsers

--- a/cassdegrees/static/css/style.css
+++ b/cassdegrees/static/css/style.css
@@ -125,3 +125,8 @@ select.text{
 .align-center {
     text-align: center;
 }
+
+.homepage-button {
+    display: block;
+    text-decoration: none;
+}
